fix(responsive): misaligned on some devices

--- a/styles/Heros.module.css
+++ b/styles/Heros.module.css
@@ -12,7 +12,7 @@
   height: 90%;
   position: fixed;
   top: 0;
-  margin: 20px;
+  margin: 20px 0;
   padding-bottom: 80px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px,
     rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
@@ -29,5 +29,9 @@
 @media (max-width: 600px) {
   .paper {
     width: 90%;
+    height: 95%;
+  }
+  .scroller {
+    height: 85%;
   }
 }
